--- a/css/menu.css
+++ b/css/menu.css
@@ -64,6 +64,8 @@ main {
   margin-bottom: 160px;
 }
 .display-flex__allArea h2 {
+  min-width: 341px;
+  min-height: 63px;
   font-family: "prenton", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -75,21 +77,27 @@ main {
 }
 .cut-area,
 .color-perm-area {
-  width: 42.177%;
+  width: 40%;
+  margin: 0 auto;
+}
+.perm-price {
+  margin-right: 0;
 }
 .display-flex__allArea th {
-  width: 14.5vw;
-  min-width: 208px;
+  width: 16vw;
+  height: 72px;
+  min-width: 250px;
   min-height: 72px;
   text-align: left;
   line-height: 2rem;
+  white-space: nowrap;
+  padding: 20px;
 }
 .display-flex__allArea td {
   text-align: center;
-  padding: 20px;
-}
-.display-flex__allArea td:nth-of-type(1) {
-  width: 7vw;
+  width: 100px;
+  height: 62px;
+  /* padding: 20px; */
 }
 .display-flex__allArea td:nth-of-type(2) {
   width: 7vw;
@@ -99,12 +107,10 @@ main {
   text-align: left;
 }
 .display-flex__allArea span {
-  font-size: 1.2rem;
+  padding-left: 10px;
+  font-size: 1rem;
 }
-.display-flex__allArea td {
-  text-align: center;
-  padding: 20px;
-}
+
 .cut-price {
   margin-bottom: 120px;
 }
@@ -117,6 +123,8 @@ main {
 .cut-area figure img {
   width: 36vw;
   height: 43vw;
+  min-width: 345px;
+  min-height: 412px;
   max-width: 518px;
   max-height: 619px;
   object-fit: cover;
@@ -157,12 +165,11 @@ main {
     line-height: 2rem;
   }
   .display-flex__allArea td {
-    text-align: center;
-    padding: 10px;
+    width: 0;
+    height: 0;
   }
   .display-flex__allArea td:nth-of-type(1) {
-    width: 3vw;
-    overflow: hidden;
+    display: none;
   }
 }
 
@@ -175,6 +182,8 @@ main {
   margin-bottom: 160px;
 }
 .display-flex__allArea2 h2 {
+  min-width: 341px;
+  min-height: 63px;
   font-family: "prenton", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -186,17 +195,20 @@ main {
 }
 .haircare-area,
 .haircare-photo {
-  width: 42.177%;
+  width: 40%;
+  margin: 0 auto;
 }
 .display-flex__allArea2 th {
-  width: 17vw;
-  min-width: 210px;
+  width: 28vw;
+  height: 72px;
+  /* min-width: 210px; */
   min-height: 72px;
   text-align: left;
   line-height: 2rem;
+  padding: 20px;
 }
 .display-flex__allArea2 td:nth-of-type(1) {
-  width: 14vw;
+  width: 4vw;
 }
 .display-flex__allArea2 td:nth-of-type(2) {
   width: 7vw;
@@ -206,7 +218,6 @@ main {
 }
 .display-flex__allArea2 td {
   text-align: center;
-  padding: 20px;
 }
 .display-flex__allArea2 p {
   text-align: left;
@@ -223,6 +234,8 @@ main {
 .haircare-photo figure img {
   width: 36vw;
   height: 43vw;
+  min-width: 345px;
+  min-height: 412px;
   max-width: 518px;
   max-height: 619px;
   object-fit: cover;
@@ -232,6 +245,7 @@ main {
 }
 @media (max-width: 960px) {
   .display-flex__allArea2 {
+    white-space: nowrap;
     flex-flow: column;
     flex-direction: column-reverse;
     align-items: center;
@@ -239,6 +253,9 @@ main {
   }
   .display-flex__allArea2 {
     margin-bottom: 60px;
+  }
+  .display-flex__allArea2 p {
+    white-space: normal;
   }
 }
 
@@ -251,6 +268,8 @@ main {
   margin-bottom: 160px;
 }
 .display-flex__allArea3 h2 {
+  min-width: 341px;
+  min-height: 63px;
   font-family: "prenton", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -262,17 +281,19 @@ main {
 }
 .spa-area,
 .spa-photo {
-  width: 42.177%;
+  width: 40%;
 }
 .display-flex__allArea3 th {
-  width: 14vw;
-  min-width: 203px;
+  white-space: nowrap;
+  width: 30vw;
+  /* min-width: 203px; */
   min-height: 72px;
   text-align: left;
   line-height: 2rem;
+  padding: 20px;
 }
 .display-flex__allArea3 td:nth-of-type(1) {
-  width: 10vw;
+  /* width: 10vw; */
 }
 .display-flex__allArea3 td:nth-of-type(2) {
   width: 8vw;
@@ -281,8 +302,11 @@ main {
   text-align: left;
 }
 .display-flex__allArea3 td {
+  white-space: nowrap;
   text-align: center;
-  padding: 20px;
+}
+.display-flex__allArea3 td span {
+  font-size: 1.4rem;
 }
 .spa-photo figure {
   width: 36vw;
@@ -293,6 +317,8 @@ main {
 .spa-photo figure img {
   width: 36vw;
   height: 33vw;
+  min-width: 345px;
+  min-height: 316px;
   max-width: 518px;
   max-height: 475px;
   object-fit: cover;
@@ -323,6 +349,8 @@ main {
   text-align: right;
 }
 .display-flex__allArea4 h2 {
+  min-width: 341px;
+  min-height: 63px;
   font-family: "prenton", sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -351,6 +379,8 @@ main {
 .info-photo figure img {
   width: 36vw;
   height: 30vw;
+  min-width: 345px;
+  min-height: 287px;
   max-width: 518px;
   max-height: 432px;
   object-fit: cover;
