--- a/css/gallery.css
+++ b/css/gallery.css
@@ -98,15 +98,61 @@ header {
 .style-photo_sub figure {
   width: 12vw; /* 14.112%*/
   height: auto;
+  margin-bottom: 32px;
 }
 .style-photo_sub figure img {
+  position: relative;
   object-fit: cover;
   width: 11.5vw;
   height: 13vw;
   max-width: 175px;
   max-height: 200px;
   object-position: 0% 0%;
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-delay: 0;
+  transition-timing-function: ease-in-out;
 }
+.style-photo_sub figure img:hover {
+  transform: scale(0.9);
+  opacity: 0.6;
+  filter: brightness(120%);
+}
+
+.style-photo_sub figure img.FadeUpUp {
+  animation-name: FadeUpAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-duration: 1.5s;
+  opacity: 0;
+}
+@keyframes FadeUpAnime {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+
+.delay-time01.FadeUpUp {
+  animation-delay: 0.7s;
+}
+.delay-time02.FadeUpUp {
+  animation-delay: 0.2s;
+}
+.delay-time03.FadeUpUp {
+  animation-delay: 0.6s;
+}
+.delay-time04.FadeUpUp {
+  animation-delay: 0.5s;
+}
+.delay-time05.FadeUpUp {
+  animation-delay: 0.4s;
+}
+
 .small-photo__area {
   width: 400px;
   height: 742px;
@@ -115,9 +161,6 @@ header {
   justify-content: space-around;
   /* align-items: center; */
   flex-wrap: wrap;
-}
-.small-photo__area figure {
-  margin-bottom: 32px;
 }
 
 .gallery-photo_main {
@@ -130,11 +173,33 @@ header {
   height: auto;
 }
 .gallery-photo_main img {
+  position: relative;
+  top: 0;
   width: 40vw;
   height: 52vw;
   max-width: 600px;
   max-height: 748px;
   object-fit: cover;
+}
+.gallery-photo_main img.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 100px;
+    /* transform: translateY(100px); */
+  }
+  100% {
+    opacity: 1;
+    /* top: 0px; */
+  }
 }
 .gallery-photo_main img:nth-of-type(5) {
   object-position: 0% 0%;
