--- a/css/common.css
+++ b/css/common.css
@@ -249,6 +249,84 @@ header nav.active.SlideToRight {
   .sp {
     display: block;
   }
+  .nav-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
+    height: 100vw;
+    min-height: 600px;
+  }
+  .nav-list-area {
+    margin: 0 auto;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 320px;
+    margin-top: 60px;
+  }
+  .nav-containar {
+    margin: 0 auto;
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+  .nav-containar li {
+    width: 150px;
+    height: 60px;
+  }
+
+  .nav-containar__child {
+    display: none;
+    display: flex;
+    justify-content: space-between;
+    width: 150px;
+    height: 60px;
+    border-top: none;
+    margin: 0 auto;
+  }
+  .nav-text {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    align-items: center;
+    border-right: none;
+  }
+  .border-none {
+    border-right: none;
+  }
+  .nav-containar__child p {
+    position: absolute;
+    color: #707070;
+    width: 150px;
+    margin: 0 auto;
+    /* margin-bottom: 20px; */
+  }
+  .sp-ver {
+    width: 300px;
+  }
+  .sp-ver p {
+    width: 300px;
+  }
+
+  .nav-containar__child p:nth-of-type(1) {
+    display: none;
+  }
+  .nav-containar__child p:nth-of-type(2) {
+    display: none;
+    border-bottom: none;
+  }
+  .nav-containar__child p:nth-of-type(3) {
+    font-family: "prenton", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: 0.1em;
+    padding-top: 0px;
+  }
+  .border-underline {
+    border-bottom: none;
+  }
 }
 
 /*  footer
