--- a/css/menu.css
+++ b/css/menu.css
@@ -62,6 +62,7 @@ main {
   flex-wrap: wrap;
   margin-bottom: 160px;
 }
+
 .display-flex__allArea h2 {
   min-width: 341px;
   min-height: 63px;
@@ -79,8 +80,74 @@ main {
   width: 40%;
   margin: 0 auto;
 }
+.cut-area .cut-detail {
+  position: relative;
+  opacity: 0;
+}
+.cut-area .cut-detail.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
+}
+.color-perm-area .color-price {
+  position: relative;
+  opacity: 0;
+}
+.color-perm-area .color-price.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
+}
 .perm-price {
+  position: relative;
   margin-right: 0;
+}
+.perm-price.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
 }
 .display-flex__allArea th {
   width: 16vw;
@@ -120,6 +187,7 @@ main {
   max-height: 619px;
 }
 .cut-area figure img {
+  position: relative;
   width: 36vw;
   height: 43vw;
   min-width: 345px;
@@ -127,6 +195,22 @@ main {
   max-width: 518px;
   max-height: 619px;
   object-fit: cover;
+}
+.cut-area figure img.fade-in {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .color-price {
   margin-bottom: 60px;
@@ -179,6 +263,29 @@ main {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: 160px;
+}
+.haircare-area {
+  position: relative;
+  opacity: 0;
+}
+.display-flex__allArea2 .haircare-area.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
 }
 .display-flex__allArea2 h2 {
   min-width: 341px;
@@ -239,6 +346,23 @@ main {
   max-height: 619px;
   object-fit: cover;
 }
+
+.haircare-photo figure img.fade-in {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .color-price {
   margin-bottom: 60px;
 }
@@ -281,6 +405,48 @@ main {
 .spa-area,
 .spa-photo {
   width: 40%;
+}
+.spa-photo {
+  position: relative;
+}
+.spa-photo figure img.fade-in {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.spa-area {
+  position: relative;
+  opacity: 0;
+}
+.spa-area.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
 }
 .display-flex__allArea3 th {
   white-space: nowrap;
@@ -346,6 +512,26 @@ main {
 }
 .info-area {
   text-align: right;
+  position: relative;
+}
+.info-area.fadeFade {
+  animation-name: fadefade;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadefade {
+  0% {
+    opacity: 0;
+    top: 50px;
+  }
+  100% {
+    opacity: 1;
+    top: 0px;
+  }
 }
 .display-flex__allArea4 h2 {
   min-width: 341px;
@@ -384,6 +570,26 @@ main {
   max-height: 432px;
   object-fit: cover;
   object-position: 100% 0%;
+}
+
+.info-photo {
+  position: relative;
+}
+.info-photo figure img.fade-in {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @media (max-width: 960px) {
   .display-flex__allArea4 {
