--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,9 @@ video {
 }
 
 @media (max-width: 960px) {
+  header {
+    overflow: hidden;
+  }
   .video-area {
     width: 100%;
     height: 100vw;
@@ -215,6 +218,28 @@ video {
     background-size: cover;
   }
 
+  .maintitle-area {
+    margin: 0 auto;
+    position: absolute;
+    left: 80px;
+    width: 80vw;
+  }
+  .maintitle-area svg {
+    max-height: auto;
+  }
+  .subtitle-area {
+    position: relative;
+    width: 100vw;
+    height: 10vw;
+  }
+  .subtitle-area h2 {
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+    right: 100px;
+    left: 100px;
+    /* right: 570px; */
+  }
   .reserve-buttom {
     position: fixed;
     top: auto;
@@ -222,28 +247,18 @@ video {
     bottom: 0;
     color: #707070;
     background-color: #f2db94;
-    width: 100%;
-    height: 40px;
+    width: 100vw;
+    height: 60px;
     text-align: center;
     border: none;
     writing-mode: horizontal-tb;
     z-index: 10;
   }
-  .reserve-buttom p {
-    font-size: 3.2rem;
-    writing-mode: horizontal-tb;
-  }
-  .maintitle-area {
-    position: absolute;
-    left: 100px;
-    width: 700px;
-  }
-  .maintitle-area svg {
-    max-height: auto;
-  }
 
   .reserve-buttom p {
+    padding-top: 10px;
     font-size: 3.2rem;
+    writing-mode: horizontal-tb;
     font-family: "prenton", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -251,6 +266,9 @@ video {
   }
 }
 @media (max-width: 520px) {
+  header {
+    overflow: hidden;
+  }
   .video-area {
     height: 100vw;
     height: 100%;
@@ -260,6 +278,26 @@ video {
     width: 100%;
     position: relative;
     height: 100%;
+  }
+  .slider-photo01 {
+    background: url(../img/sliderphoto01.jpeg) 68% 40%;
+  }
+  .slider-photo02 {
+    background: url(../img/sliderphoto02.jpeg) 70% 40%;
+  }
+
+  .slider-photo03 {
+    background: url(../img/sliderphoto03.jpeg) 65% 40%;
+  }
+  .slider-photo04 {
+    background: url(../img/sliderphoto04.jpeg) 15% 100%;
+  }
+  .slider-items {
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
   }
   .title-area {
     display: block;
@@ -305,7 +343,8 @@ video {
     width: 100vw;
     max-width: 440px;
     position: absolute;
-    right: 0;
+    right: 10px;
+    left: 10px;
     font-size: 1.6rem;
     /* top: 400px; */
     /* right: 570px; */
@@ -687,7 +726,7 @@ video {
     height: auto;
     font-size: 10rem;
     margin-bottom: 72px;
-    margin-top: 0px;
+    margin-top: 20px;
     letter-spacing: 0.03em;
   }
   .conceptParagraph {
@@ -703,7 +742,7 @@ video {
     margin-bottom: 40px;
   }
   .concept-area figure {
-    width: 100vw;
+    width: 100%;
     height: auto;
     /* position: relative; */
   }
@@ -718,9 +757,9 @@ video {
     position: relative;
     top: 40px;
     background-color: #f2db94;
-    margin: 100px -50px;
+    margin: 50px -50px;
     width: 100%; /* 60.483% */
-    height: 70vw;
+    height: 66vw;
     max-height: 350px;
     z-index: 1;
   }
@@ -951,7 +990,7 @@ video {
     margin-bottom: 0px;
   }
   .cutting-brown__bg {
-    width: 554px;
+    width: 100%;
     height: 239px;
     max-height: 360px;
     z-index: -1;
@@ -988,8 +1027,8 @@ video {
     position: relative;
     /* display: block; */
     /* top: 30px; */
-    width: 40px;
-    height: 110px;
+    width: 24px;
+    height: 64px;
     bottom: 90px;
     animation-name: scrollAnimation;
     animation-duration: 2.5s;
@@ -1089,6 +1128,31 @@ a {
     font-style: normal;
     padding: 0;
     margin-bottom: 60px;
+  }
+}
+@media (max-width: 520px) {
+  .news-area {
+    max-width: 810px;
+    margin: 0 auto;
+    margin-bottom: 200px;
+  }
+  .news-title {
+    text-align: center;
+  }
+  .news-title h2 {
+    display: inline-block;
+    font-size: 4rem;
+    font-family: "prenton", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    padding: 0;
+    margin-bottom: 60px;
+  }
+  .news01 h3,
+  .news02 h3,
+  .news03 h3 {
+    font-size: 1.4rem;
+    padding-left: 10px;
   }
 }
 
