--- a/css/common.css
+++ b/css/common.css
@@ -242,6 +242,16 @@ header nav.active.SlideToRight {
   padding: 30px;
   /* margin: 30px auto; */
 }
+
+.header-container img {
+  width: 142px;
+  height: 74px;
+  z-index: 10;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  z-index: 1;
+}
 @media (max-width: 960px) {
   .pc {
     display: none;
@@ -345,7 +355,17 @@ header nav.active.SlideToRight {
     padding-top: 0px;
   }
 }
-
+@media (max-width: 520px) {
+  .header-container img {
+    width: 28vw;
+    height: 14vw;
+    z-index: 10;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1;
+  }
+}
 /*  footer
 --------------------------------*/
 footer {
